--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,13 @@
         </head>
         <body>
             <main>
-                <p>I am currently an Northern Illinois University Student majoring in Operation Managment and Information System with a minor in Data Analytics.
+                <p>
+                    I am currently an Northern Illinois University Student majoring in Operation Managment and Information System with a minor in Data Analytics.
                     I was a previsuis students at Sauk Valley Community College where I got my Associate's of Science, and before there I graduated from Rock
                     Falls Township High School.
+                </p>
+                <p>
+                    Some of my current interests include the following: Playing Games with friends
                 </p>
             </main>
         </body>
