--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                     Falls Township High School.
                 </p>
                 <p>
-                    Some of my current interests include the following: Playing Games with friends
+                    Some of my current interests include the following: Playing Games with friends, Being outdoors, Spending time with friends, Listening to music.
+                    To read more follow the <a href="HTML/currentinterests.html">link</a>.
                 </p>
             </main>
         </body>
