--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         </head>
         <body>
             <main>
+                <h3>Dillon's Enducation</h3>
                 <p>
                     I am currently an Northern Illinois University Student majoring in Operation Managment and Information System with a minor in Data Analytics.
                     I was a previsuis students at Sauk Valley Community College where I got my Associate's of Science, and before there I graduated from Rock
                     Falls Township High School.
                 </p>
+                <h3>Dillon's Current <a href="HTML/currentinterests.html">Interests</a></h3>
                 <p>
                     Some of my current interests include the following: Playing Games with friends, Being outdoors, Spending time with friends, Listening to music.
                     To read more follow the <a href="HTML/currentinterests.html">link</a>.
