--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
         <head>
             <title>Dillon Larson</title>
             <meta charset="utf-8">
-            <link >
+            <link rel="stylesheet" href="CSS/homepage.css">
         </head>
         <body>
             <header></header>
-            <nav></nav>
+            <nav>
+                <a href="index.html">Home</a> &nbsp;
+                <a href=""></a>
+            </nav>
             <main>
                 <div>
                     <h3>Dillon's Enducation</h3>
