--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
             <link rel="stylesheet" href="CSS/homepage.css">
         </head>
         <body>
-            <header></header>
+            <header>
+                <h1>Dillon's Web Presence</h1>
+            </header>
             <nav>
                 <a href="index.html">Home</a> &nbsp;
                 <a href=""></a>
