--- a/HTML/currentinterests.html
+++ b/HTML/currentinterests.html
@@ -3,7 +3,7 @@
         <head>
             <title>Current Interests</title>
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css"
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
         </head>
         <body>
             <p>A little about myself and the current things that I enjoy doing. One of the many things that takes up my free time is playing video games with my friends from
