--- a/HTML/currentinterests.html
+++ b/HTML/currentinterests.html
@@ -6,6 +6,7 @@
             <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
         </head>
         <body>
+            <h2>Dillon's Current Interests</h2>
             <p>A little about myself and the current things that I enjoy doing. One of the many things that takes up my free time is playing video games with my friends from
                 my home town. We have a list of games that we bounce between these include:
             </p>
