--- a/HTML/currentinterests.html
+++ b/HTML/currentinterests.html
@@ -4,6 +4,11 @@
             <title>Current Interests</title>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
+            <style>
+                li {
+                    text-decoration: none;
+                }
+            </style>
         </head>
         <body>
             <h2 style="text-align: center;">Dillon's Current Interests</h2>
