--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <p>
                         I am currently an Northern Illinois University Student majoring in Operation Managment and Information System with a minor in Data Analytics.
                         I was a previsuis students at Sauk Valley Community College where I got my Associate's of Science, and before there I graduated from Rock
-                        Falls Township High School. To read more about my education follow this <a href="">link</a>.
+                        Falls Township High School. To read more about my education follow this <a href="HTML/education.html">link</a>.
                     </p>
                 </div>
                 <div>
@@ -31,7 +31,10 @@
                 </div>
                 <div>
                     <h3>Dillon's Past Adventures</h3>
-                    <p></p>
+                    <p>
+                        In my life I have traveled to many places in the United States, but I have been to a few places outside of the country.
+                        For a list of places I have been follow the <a href="HTML/pastadventures.html">link</a>.
+                    </p>
                 </div>
             </main>
         </body>
