--- a/HTML/currentinterests.html
+++ b/HTML/currentinterests.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
                 ul {
-                    text-decoration: none;
+                    list-style-type: none;
                 }
             </style>
         </head>
