--- a/HTML/education.html
+++ b/HTML/education.html
@@ -5,4 +5,20 @@
             <meta charset="utf-8">
         </head>
         <body>
+            <div>
+                <h2>Rock Falls Township High School</h2>
+                <p>
+                    Graduated from here in May 2014 with a high school degree.
+                </p>
+            </div>
+            <div>
+                <h2>Sauk Valley Community College</h2>
+                <p>
+                    Graduated from Sauk in May 2017 after completing my general education for a business field and gaining my Associate's of Science degree.
+                </p>
+            </div>
+            <div>
+                <h2>Northern Illinois University</h2>
+                <p>I am currently in my seinor year here at NIU. </p>
+            </div>
         </body>
