--- a/HTML/currentinterests.html
+++ b/HTML/currentinterests.html
@@ -5,26 +5,35 @@
             <meta charset="UTF-8">
             <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
-                ul {
-                    list-style-type: none;
+                h2 {
+                    text-align: center;
                 }
             </style>
         </head>
         <body>
-            <h2 style="text-align: center;">Dillon's Current Interests</h2>
+            <h2>Dillon's Current Interests</h2>
             <main>
-                <p>A little about myself and the current things that I enjoy doing. One of the many things that takes up my free time is playing video games with my friends from
-                my home town. We have a list of games that we bounce between these include:
-                </p>
-                <ul>
-                    <li>The Division 2 (Xbox)</li>
-                    <li>Battlefield V (Xbox)</li>
-                    <li>Ark Survival Evolved (Xbox/Pc)</li>
-                    <li>World of Tanks (Xbox/Pc)</li>
-                    <li>World of Warships (Pc)</li>
-                    <li>The Elder Scrolls V: Skyrim (Pc/Xbox)</li>
-                    <li>Rainbow Six Siege (Xbox)</li>
-                    <li>PlayerUnknown's BattleGround (Xbox)</li>
-                </ul>
+                <div>
+                    <h4>Gaming</h4>
+                    <p>A little about myself and the current things that I enjoy doing. One of the many things that takes up my free time is playing video games with my friends from
+                    my home town. We have a list of games that we bounce between these include:
+                    </p>
+                    <ul style="list-style-type: circle">
+                        <li>The Division 2 (Xbox)</li>
+                        <li>Battlefield V (Xbox)</li>
+                        <li>Ark Survival Evolved (Xbox/Pc)</li>
+                        <li>World of Tanks (Xbox/Pc)</li>
+                        <li>World of Warships (Pc)</li>
+                        <li>The Elder Scrolls V: Skyrim (Pc/Xbox)</li>
+                        <li>Rainbow Six Siege (Xbox)</li>
+                        <li>PlayerUnknown's BattleGround (Xbox)</li>
+                    </ul>
+                </div>
+                <div>
+                    <4>Outdoors</4>
+                    <p>As a Eagle Scout, I enjoy being outside in nature being in the woods, or being around water. Just
+                        recently I took a class to get Open Water Diving Certification.
+                    </p>
+                </div>
             </main>
         </body>
