--- a/HTML/education.html
+++ b/HTML/education.html
@@ -19,6 +19,10 @@
             </div>
             <div>
                 <h2>Northern Illinois University</h2>
-                <p>I am currently in my seinor year here at NIU. </p>
+                <p>
+                    I am currently in my senior year here at NIU. With plans to graduate in the Fall of 2019.
+                    I will be graduating from NIU with a bachelor's degree in Operation Management & Information Systems.
+                    with an emphasis in Information Systems and a minor in Data Analytics.
+                </p>
             </div>
         </body>
