--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
             </header>
             <nav>
                 <a href="index.html">Home</a> &nbsp;
-                <a href=""></a>
+                <a href="HTML/education.html">Education</a> &nbsp;
+                <a href="HTML/currentinterests.html">Interests</a> &nbsp;
+                <a href="HTML/pastadventures.html">Adventures</a> &nbsp;
             </nav>
             <main>
                 <div>
-                    <h3>Dillon's Enducation</h3>
+                    <h3>Dillon's Education</h3>
                     <p>
                         I am currently an Northern Illinois University Student majoring in Operation Managment and Information System with a minor in Data Analytics.
                         I was a previsuis students at Sauk Valley Community College where I got my Associate's of Science, and before there I graduated from Rock
