--- a/HTML/currentinterests.html
+++ b/HTML/currentinterests.html
@@ -30,7 +30,7 @@
                     </ul>
                 </div>
                 <div>
-                    <4>Outdoors</4>
+                    <h4>Outdoors</h4>
                     <p>As a Eagle Scout, I enjoy being outside in nature being in the woods, or being around water. Just
                         recently I took a class to get Open Water Diving Certification.
                     </p>
