--- a/HTML/hobbies.html
+++ b/HTML/hobbies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Current Interests</title>
+            <title>Hobbies</title>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
@@ -11,7 +11,7 @@
             </style>
         </head>
         <body>
-            <h2>Dillon's Current Interests</h2>
+            <h2>Dillon's Hobbies</h2>
             <main>
                 <div>
                     <h4>Gaming</h4>
