--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -5,6 +5,8 @@
             <meta charset="utf-8">
         </head>
         <body>
-            
+            <form>
+                
+            </form>
         </body>
     </html>
