--- a/index.html
+++ b/index.html
@@ -10,10 +10,35 @@
                 <h1>Dillon's Web Presence</h1>
             </header>
             <nav>
-                <a href="index.html">Home</a> &nbsp;
-                <a href="HTML/education.html">Education</a> &nbsp;
-                <a href="HTML/currentinterests.html">Interests</a> &nbsp;
-                <a href="HTML/pastadventures.html">Adventures</a> &nbsp;
+                <a href="index.html">Home</a>
+                <div class="dropdown">
+                    <button class="dropbtn">About</button>
+                    <div class="dropdown-content">
+                        <a href="HTML/hobbies.html">Hobbies</a>
+                        <a href="HTML/pastadventures.html">Adventures</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Education</button>
+                    <div class="dropdown-content">
+                        <a href="HTML/Education.html">Education</a>
+                        <a href="HTML/niuprojects.html">NIU Projects</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Future</button>
+                    <div class="dropdown-content">
+                        <a href="HTML/futureendevers.html">Future Endevers</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Suggestions</button>
+                    <div class="dropdown-content">
+                        <a href="HTML/vacationsug.html">Vacations Suggestions</a>
+                        <a href="HTML/musicsuggestion.html">Music Suggestions</a>
+                    </div>
+                </div>
+                
             </nav>
             <main>
                 <div>
