--- a/HTML/musicsuggestion.html
+++ b/HTML/musicsuggestion.html
@@ -9,7 +9,12 @@
             </nav>
             <form>
                 <h2>Music Suggestion</h2>
-                
+                <label for="songtitle">*Song Title:</label>
+                <input type="text" name="songtitle" id="songtitle" required="required"><br>
+                <label for="artist">*Artist:</label>
+                <input type="text" name="artist" id="artist" required="required"><br>
+                <label for="album">*Album:</label>
+                <input type="text" name="album" id="artist" required="required">
             </form>
         </body>
     </html>
