--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -5,6 +5,12 @@
             <meta charset="utf-8">
         </head>
         <body>
-            
+            <nav>
+                
+            </nav>
+            <div class="352">
+                <h3>OMIS 352</h3>
+                <p></p>
+            </div>
         </body>
     </html>
