--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -5,6 +5,26 @@
             <meta charset="utf-8">
         </head>
         <body>
+            <nav>
+                <div class="dropdown">
+                    <button class="dropbtn">About</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/.html"></a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Education</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/education.html">Education</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"></button>
+                    <div class="dropdown-content">
+    
+                    </div>
+                </div>
+            </nav>
             <form>
                 
             </form>
