--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -9,19 +9,29 @@
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
-                        <a href="/475personalproject/HTML/.html"></a>
+                        <a href="/475personalproject/HTML/hobbies.html">Hobbies</a>
+                        <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
+                        <a href="/475personalproject/HTML/vacation.html">Vacation</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">Education</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/education.html">Education</a>
+                        <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn"></button>
+                    <button class="dropbtn">Future</button>
                     <div class="dropdown-content">
-    
+                        <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Suggestions</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
+                        <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
                     </div>
                 </div>
             </nav>
