--- a/HTML/education.html
+++ b/HTML/education.html
@@ -3,6 +3,7 @@
         <head>
             <title>Dillon's Education</title>
             <meta charset="utf-8">
+            <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
         </head>
         <body>
             <nav>
@@ -29,12 +30,12 @@
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn">Suggestions</button>
-                            <div class="dropdown-content">
-                                <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
-                                <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
-                            </div>
-                        </div>
-                    </nav>
+                        <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
+                        <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
+                    </div>
+                </div>
+            </nav>
             <div>
                 <h2>Rock Falls Township High School</h2>
                 <p>
