--- a/HTML/placeholder.html
+++ b/HTML/placeholder.html
@@ -3,6 +3,7 @@
         <head>
             <title>PlaceHolder</title>
             <meta charset="utf-8">
+            <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
         </head>
         <body>
             <nav>
