--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <title>Dillon Larson</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="CSS/homepage.css">
+            <link rel="stylesheet" href="CSS/dropdown.css">
         </head>
         <body>
             <header>
