--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <h1>Dillon's Web Presence</h1>
             </header>
             <nav>
-                <a href="index.html">Home</a>
+                <button class="dropbtn"><a href="index.html">Home</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
