--- a/HTML/hobbies.html
+++ b/HTML/hobbies.html
@@ -4,6 +4,7 @@
             <title>Hobbies</title>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
             <style>
                 h2 {
                     text-align: center;
@@ -11,36 +12,37 @@
             </style>
         </head>
         <body>
-                <nav>
-                        <div class="dropdown">
-                            <button class="dropbtn">About</button>
-                            <div class="dropdown-content">
-                                <a href="/475personalproject/HTML/hobbies.html">Hobbies</a>
-                                <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
-                                <a href="/475personalproject/HTML/vacation.html">Vacation</a>
-                            </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">Education</button>
-                            <div class="dropdown-content">
-                                <a href="/475personalproject/HTML/education.html">Education</a>
-                                <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
-                            </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">Future</button>
-                            <div class="dropdown-content">
-                                <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
-                            </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">Suggestions</button>
-                            <div class="dropdown-content">
-                                <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
-                                <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
-                            </div>
-                        </div>
-                    </nav>
+            <nav>
+                <button class="dropbtn"><a href="index.html">Home</a></button>
+                <div class="dropdown">
+                    <button class="dropbtn">About</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/hobbies.html">Hobbies</a>
+                        <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
+                        <a href="/475personalproject/HTML/vacation.html">Vacation</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Education</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/education.html">Education</a>
+                        <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Future</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Suggestions</button>
+                    <div class="dropdown-content">
+                        <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
+                        <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
+                    </div>
+                </div>
+            </nav>
             <h2>Dillon's Hobbies</h2>
             <main>
                 <div>
