--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -3,9 +3,11 @@
         <head>
             <title>PlaceHolder</title>
             <meta charset="utf-8">
+            <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
         </head>
         <body>
             <nav>
+                    <button class="dropbtn"><a href="index.html">Home</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
