--- a/HTML/placeholder.html
+++ b/HTML/placeholder.html
@@ -7,6 +7,7 @@
         </head>
         <body>
             <nav>
+                <button class="dropbtn"><a href="index.html">Home</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
@@ -36,5 +37,6 @@
                     </div>
                 </div>
             </nav>
+
         </body>
     </html>
