--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
         <head>
             <title>Dillon Larson</title>
             <meta charset="utf-8">
-            <link rel="stylesheet" href="CSS/homepage.css">
             <link rel="stylesheet" href="CSS/dropdown.css">
+            <style>
+                body { 
+                    background-image: url(Images/mybackground.jpg);
+                    background-color: blue;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    font-family: Georgia, 'Times New Roman', Times;
+                    font-size: 12pt;
+                }
+                h1 {
+                    color: white;
+                    text-align: center;
+                }
+                nav {
+                    text-align: center;
+                }
+            </style>
         </head>
         <body>
             <header>
@@ -39,32 +55,7 @@
                         <a href="HTML/musicsuggestion.html">Music Suggestions</a>
                     </div>
                 </div>
-                
             </nav>
-            <main>
-                <div>
-                    <h3>Dillon's Education</h3>
-                    <p>
-                        I am currently an Northern Illinois University Student majoring in Operation Managment and Information System with a minor in Data Analytics.
-                        I was a previsuis students at Sauk Valley Community College where I got my Associate's of Science, and before there I graduated from Rock
-                        Falls Township High School. To read more about my education follow this <a href="HTML/education.html">link</a>.
-                    </p>
-                </div>
-                <div>
-                    <h3>Dillon's Current Interests</h3>
-                    <p>
-                        Some of my current interests include the following: Playing Games with friends, Being outdoors, Spending time with friends, Listening to music.
-                        To read more follow the <a href="HTML/currentinterests.html">link</a>.
-                    </p>
-                </div>
-                <div>
-                    <h3>Dillon's Past Adventures</h3>
-                    <p>
-                        In my life I have traveled to many places in the United States, but I have been to a few places outside of the country.
-                        For a list of places I have been follow the <a href="HTML/pastadventures.html">link</a>.
-                    </p>
-                </div>
-            </main>
         </body>
         <footer></footer>
     </html>
