--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -38,7 +38,14 @@
                 </div>
             </nav>
             <form>
-                
+                    <h2>Vacation Suggestion</h2>
+                    <label for="place">*Place:</label><br>
+                    <input type="text" name="place" id="place" required="required"><br>
+                    <label for="artist">*Best Times to Go:</label><br>
+                    <input type="text" name="times" id="times" required="required"><br>
+                    <label for="todo">*Things to do at location:</label><br>
+                    <textarea name="todo" id="todo" rows="3" cols="125"
+                    required="required" maxlength="1600"></textarea>
             </form>
         </body>
     </html>
