--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>PlaceHolder</title>
+            <title>Resume</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
         </head>
@@ -37,6 +37,8 @@
                     </div>
                 </div>
             </nav>
-
+            <main>
+                
+            </main>
         </body>
     </html>
