--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -8,6 +8,7 @@
         <body>
             <nav>
                 <button class="dropbtn"><a href="index.html">Home</a></button>
+                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
@@ -38,7 +39,8 @@
                 </div>
             </nav>
             <main>
-                
+                <h2>Dillon Larson</h2>
+                <
             </main>
         </body>
     </html>
