--- a/HTML/hobbies.html
+++ b/HTML/hobbies.html
@@ -14,6 +14,7 @@
         <body>
             <nav>
                 <button class="dropbtn"><a href="index.html">Home</a></button>
+                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
