--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </header>
             <nav>
                 <button class="dropbtn"><a href="index.html">Home</a></button>
+                <button class="dropbtn"><a href="HTML/resume.html">Resume</a></button>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
