--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -40,7 +40,9 @@
             </nav>
             <main>
                 <h2>Dillon Larson</h2>
-                <
+                <p>1304 6th Ave, Rock Falls, IL 61071</p><br>
+                <p>(815)-590-2023</p>
+                <p><a href="mailto:dillonmlarson@gmail.com">dillonmlarson@gmail.com</a></p>
             </main>
         </body>
     </html>
