added more stuff

--- a/HTML/futureendevers.html
+++ b/HTML/futureendevers.html
@@ -38,4 +38,21 @@
                     </div>
                 </div>
             </nav>
+            <main>
+                <div>
+                    <h3>Right After College</h3>
+                    <p>
+                        After graduating from NIU I plan on finding a job for a few years and debate going back to school for my Masters degree.
+                        I have a few jobs that I would like to look into, but I might have to go outside of my hometown to finds employment.
+                    </p>
+                </div>
+                <div>
+                    <h3>10-15 years from now</h3>
+                    <p>
+                        In ten to fifteen years from now I will have either gone back to school and gotten my Masters or said I don't have the time and gone to work for my family.
+                        My family owns a manufactoring business in my hometown. With my experties I would like to try to 
+                    </p>
+                </div>
+            </main>
         </body>
+    </html>
