--- a/HTML/hobbies.html
+++ b/HTML/hobbies.html
@@ -9,6 +9,16 @@
                 h2 {
                     text-align: center;
                 }
+                body {
+                    background-image: url(/475personalproject/Images.gaming.jpg);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+                main {
+                    background-color: white;
+                    color: black;
+                    padding: 50px 50px 50px 50px
+                }
             </style>
         </head>
         <body>
@@ -44,7 +54,7 @@
                     </div>
                 </div>
             </nav>
-            <h2>Dillon's Hobbies</h2>
+            <h2 style="color: white;">Dillon's Hobbies</h2>
             <main>
                 <div>
                     <h4>Gaming</h4>
@@ -70,3 +80,4 @@
                 </div>
             </main>
         </body>
+    </html>
