--- a/HTML/musicsuggestion.html
+++ b/HTML/musicsuggestion.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </nav>
-            <form>
+            <form style="text-align: center;">
                 <h2>Music Suggestion</h2>
                 <label for="songtitle">*Song Title:</label>
                 <input type="text" name="songtitle" id="songtitle" required="required"><br>
