--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -4,6 +4,13 @@
             <title>PlaceHolder</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <style>
+                body {
+                    height: 200px;
+                    background-color: red;
+                    background-image: linear-gradient(to left, red, white, red);
+                }
+            </style>
         </head>
         <body>
             <nav>
