--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -39,10 +39,88 @@
                 </div>
             </nav>
             <main>
-                <h2>Dillon Larson</h2>
-                <p>1304 6th Ave, Rock Falls, IL 61071</p><br>
-                <p>(815)-590-2023</p>
-                <p><a href="mailto:dillonmlarson@gmail.com">dillonmlarson@gmail.com</a></p>
+                <div>
+                    <h2>Dillon Larson</h2>
+                    <p>1304 6th Ave, Rock Falls, IL 61071</p><br>
+                    <p>(815)-590-2023</p>
+                    <p><a href="mailto:dillonmlarson@gmail.com">dillonmlarson@gmail.com</a></p>
+                </div>
+                <div>
+                    <h2>Employment</h2>
+                        <ul>
+                            <li>Detassling</li>
+                                <ul>
+                                    <li>Summer of 2008 through Summer of 2011</li>
+                                    <li>Monsanto</li>
+                                    <li>Pioneer</li>
+                                    <li>Position: Field Worker</li>
+                                </ul>
+                            <li>Summer Camp Counselor</li>
+                                <ul>
+                                    <li>Summer of 2012</li>
+                                    <li>Boy Scouts of America</li>
+                                    <li>Postions: New scout skills counselor</li>
+                                </ul>
+                            <li>Rock River Country Club</li>
+                                <ul>
+                                    <li>Summer of 2013 thought Spring of 2014</li>
+                                    <li>Rock River Country Club</li>
+                                    <li>Position: Busser and Event setup</li>
+                                </ul>
+                            <li>Wal-Mart</li>
+                                <ul>
+                                    <li>May, 2014 thought present</li>
+                                    <li>Position: Cashier (May, 2014 - Febuary, 2015)</li>
+                                    <li>Position: Grocery stocker (2015 - 2015)</li>
+                                    <li>Position: Forzen and Dairy stocker (2015 - 2017)</li>
+                                    <li>Position: Produce stocker (2017 - July 2018)</li>
+                                    <li>Position: Fresh Cap 2 (July 2018 - present)</li>
+                                </ul>
+                        </ul>
+                </div>
+                <div>
+                    <h2>Education</h2>
+                        <ul>
+                            <li>Sauk Valley Community College</li>
+                                <ul>
+                                    <li>Graduated 2017</li>
+                                    <li>Associates of Science</li>
+                                </ul>
+                            <li>Northern Illinois University</li>
+                                <ul>
+                                    <li>Expected Graduation Fall 2019</li>
+                                    <li>Bachelors Degree in Operational Managment and Information Systems</li>
+                                    <li>Minor in Business Analytics</li>
+                                </ul>
+                        </ul>
+                </div>
+                <div>
+                    <h2>Technical Skills</h2>
+                        <ul>
+                            <li>Databases</li>
+                                <ul>
+                                    <li>Microsoft Access</li>
+                                    <li>SQL Server</li>
+                                </ul>
+                            <li>Software</li>
+                                <ul>
+                                    <li>SAP ERP</li>
+                                    <li>SAP Predivitive ANalytics</li>
+                                </ul>
+                            <li>Operating Systems</li>
+                                <ul>
+                                    <li>Windows 7, 8, 8.1, & 10</li>
+                                </ul>
+                            <li>Microsoft Tools</li>
+                            <li>Coding</li>
+                                <ul>
+                                    <li>HTML and CSS</li>
+                                    <li>C#</li>
+                                    <li>python</li>
+                                    <li>Javascript and Jquery</li>
+                                </ul>
+                        </ul>
+                </div>
             </main>
         </body>
     </html>
