--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </nav>
-            <form>
+            <form style="text-align: center;">
                     <h2>Vacation Suggestion</h2>
                     <label for="place">*Place:</label><br>
                     <input type="text" name="place" id="place" required="required"><br>
