--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>PlaceHolder</title>
+            <title>NIU Projects</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
             <style>
@@ -47,7 +47,16 @@
             </nav>
             <div class="352">
                 <h3>OMIS 352</h3>
-                <p></p>
+                <p>
+                    Community serivce project: My group cleaned up the area around the east lagoon.
+                </p>
+            </div>
+            <div>
+                <h3>OMIS 442</h3>
+                <p>
+                    Research into a quality control method. My group researched ISO 9000. We interviewed the company Beacon Fasteners in
+                    Wheeling, IL.
+                </p>
             </div>
         </body>
     </html>
