--- a/HTML/pastendevers.html
+++ b/HTML/pastendevers.html
@@ -38,5 +38,28 @@
                     </div>
                 </div>
             </nav>
+            <main>
+                <h2>My Past Endevers</h2>
+                <div>
+                    <h3>Eagle Scout</h3>
+                    <p>
+                        I earned the rank of Eagle back in December of 2012. To earn the rank of Eagle you have to complete so many
+                        community service hours, hold a leadership position for so many months, organize and lead a service project
+                         for your community, and earn ten more merit badges.
+                    </p>
+                </div>
+                <div>
+                    <h3>National Honors Society</h3>
+                    <p>
+                        Earned National Honors Society in high school for my academics.
+                    </p>
+                </div>
+                <div>
+                    <h3>Track</h3>
+                    <p>
+                        Ran track in high school from my softmore year to my seinor year.
+                    </p>
+                </div>
+            </main>
         </body>
     </html>
