--- a/HTML/hobbies.html
+++ b/HTML/hobbies.html
@@ -10,7 +10,7 @@
                     text-align: center;
                 }
                 body {
-                    background-image: url(/475personalproject/Images.gaming.jpg);
+                    background-image: url(/475personalproject/Images/gaming.jpg);
                     background-repeat: no-repeat;
                     background-size: cover;
                 }
@@ -18,6 +18,10 @@
                     background-color: white;
                     color: black;
                     padding: 50px 50px 50px 50px
+                }
+                tbody {
+                    border-bottom: 1px black solid;
+                    padding-left: 25px;
                 }
             </style>
         </head>
@@ -61,16 +65,49 @@
                     <p>A little about myself and the current things that I enjoy doing. One of the many things that takes up my free time is playing video games with my friends from
                     my home town. We have a list of games that we bounce between these include:
                     </p>
-                    <ul style="list-style-type: circle">
-                        <li>The Division 2 (Xbox)</li>
-                        <li>Battlefield V (Xbox)</li>
-                        <li>Ark Survival Evolved (Xbox/Pc)</li>
-                        <li>World of Tanks (Xbox/Pc)</li>
-                        <li>World of Warships (Pc)</li>
-                        <li>The Elder Scrolls V: Skyrim (Pc/Xbox)</li>
-                        <li>Rainbow Six Siege (Xbox)</li>
-                        <li>PlayerUnknown's BattleGround (Xbox)</li>
-                    </ul>
+                    <table>
+                        <caption>Games I play</caption>
+                            <thead>
+                                <tr>
+                                    <th id="games">Games</th>
+                                    <th id="system">System</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td headers="games">The Division 2</td>
+                                    <td headers="system">Xbox</td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">Battlefield V</td>
+                                    <td headers="system">Xbox</td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">Ark Survival Evolved</td>
+                                    <td headers="system">Xbox/Pc</td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">World of Tanks</td>
+                                    <td headers="system">Xbox/Pc</td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">World of Warships</td>
+                                    <td headers="system">Pc</td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">The Elder Scrolls V: Skyrim</td>
+                                    <td headers="system"></td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">Rainbow Six Siege</td>
+                                    <td headers="system">Xbox</td>
+                                </tr>
+                                <tr>
+                                    <td headers="games">PlayerUnknown's BattleGround</td>
+                                    <td headers="system">Xbox</td>
+                                </tr>
+                            </tbody>
+                    </table>
                 </div>
                 <div>
                     <h4>Outdoors</h4>
